Version 0.532008 | 2011-04-15 17:45:48Z (Fri, 15 Apr 2011) | 246971a

    Resolved Issues/Bug Fixes:
     * Primitive FLTK::Rectangle can now be subclassed and extended to create
         complete custom widgets in Perl (example to come)
     * FLTK::Group->add( $widget ), et al. correctly return $widget

    API Changes/Compatibility Information:
     * New Widgets/Types
       - TabGroupPager

Version 0.532007 | 2011-02-02 21:48:26Z (Wed, 02 Feb 2011) | 3d6d95a

    Resolved Issues/Bug Fixes:
     * $group->child( $i ) no longer crashes when $group has less than $i kids
     * FLTK::Window::first( ) correctly returns the first/primary window

    API Changes/Compatibility Information:
     * FLTK::Group->add( ... ), ->insert( ... ), and ->replace( ... ) now
         return the widget added, inserted, or used as a replacement. This
         allows code like my $box = $window->add( FLTK::Widget->( ... ) ); and
         is not compatible with the C++ API
     * New Widgets/Types
       - StatusBarGroup, ToggleButton, ToggleItem, ValueSlider
     * Add support for add_fd( ... ) and remove_fd( ... )
     * FLTK::GLWindow is no longer disabled on Win32 (try the example)

    Documentation/Sample Code/Test Suite/Metadata:
     * Updated repo URLs
     * Updated README
     * Moved basic POD from xs/FLTK.xs to lib/FLTK.pm
     * Allow systems to skip tests when Test::NeedsDisplay fails
     * Upgraded ask( ... ) and choice( ... ) to major C++/Perl API differences
     * New, simple IO watcher example (echo server)
     * New, simple add_fd( ... ) and remove_fd( ... ) tests
     * Final docs are generated on Build dist rather than Build install
     * Delay test plan until we know Test::NeedsDisplay is finished

    Notes:
     * Requires AF2 0.08323

Version 0.532006 | 2010-09-27 04:13:25Z (Mon, 27 Sep 2010) | 04ca288

    Resolved Issues/Bug Fixes:
     * Cleaned up general stupidity in FLTK::TabGroup->tab_positions()