@@ -77,40 +77,3 @@ elected tab    */
 =cut
 
 #endif // #ifndef DISABLE_TABGROUPPAGER
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
